Add home and product page

--- a/pages/home.html
+++ b/pages/home.html
@@ -13,14 +13,16 @@
   <script type="application/json" data-pattern="header/header"></script>
 
   <script type="application/json" data-pattern="banner/home-banner">{
-    ".home-text-image-banner[class]": "home-text-image-banner banner-img-3 embed embed-4by3"
+    ".home-text-image-banner[class]": "home-text-image-banner banner-img-1 embed embed-16by9",
+    "h1": "Home of the Rubik",
+    "p": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
   }</script>
 
-  <main>
+  <main >
     <div class="grid grid-stretch island-2">
       <div class="unit [ xs-1 l-1-2 xl-1-4 ] unit-content-distribute pad-t pad-b">
         <script type="application/json" data-pattern="card/info-card">{
-          "img[src]": "../images/multiple-rubik.jpg",
+          "img[src]": "../images/four-by-four-by-four.jpg",
           "h3": "New Releases",
           "p": "A Whole new type of rubik introduced to our collection at Rubikas"
         }</script>
