--- a/patterns/banner/home-banner.html
+++ b/patterns/banner/home-banner.html
@@ -14,18 +14,18 @@
 </head>
 <body>
 
-  <main id="main" role="main" tabindex="0">
+  <section>
     <div class="banner">
-      <div class="home-text-image-banner banner-img-1 embed embed-4by3" aria-details="banner-image-of-one-of-our-rubik's-cube">
+      <div class="home-text-image-banner banner-img-1 embed embed-16by9" aria-details="banner-image-of-one-of-our-rubik's-cube">
       </div>
       <div class="gutter-2 home-text-box-banner island">
         <div class="wrapper">
-          <h1 class="banner-h1 tenamega push-0">Home of the Rubik</h1>
-          <p class="banner-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h1 class="banner-h1 tenamega push-0">This is your Heading, target h1.</h1>
+          <p class="banner-p">Add a description to your banner, target p.</p>
         </div>
         </div>
     </div>
-  </main>
+  </section>
 
 </body>
 </html>
