--- a/patterns/forms/legend-label.html
+++ b/patterns/forms/legend-label.html
@@ -20,7 +20,7 @@
         <span class="icon-label">There are items that require your attention</span>
       </h3>
     </div>
-    <legend class="legend zetta bold"><b class="inline-block number-devider text-center zetta push-r-1-2">1</b>Billing information</legend>
+    <legend class="legend zetta bold"><b class="inline-block number-devider text-center zetta push-r-1-2">1</b><span>Billing information</span></legend>
   </div>
 
 
