--- a/patterns/forms/phone-form.html
+++ b/patterns/forms/phone-form.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>text-input</title>
+  <title>Phone-Form</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -15,17 +15,18 @@
 <body>
 
     <div>
-        <div>
-          <label for="first-name">First Name</label>
-          <input type="text" name="first-name" id="first-name" required aria-describedby="first-name-error">
-          <p class="error-message milli island-1-4 push-0 text-center" id="first-name-error">
-            <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#form-warning" /></svg></i>
-            <span class="icon-label">Please fill out your name as instructed</span>
-          </p>
-        </div>
+      <div>
+        <label for="phone-number">Phone</label>
+        <input type="tel" id="phone-number" required aria-describedby="phone-error" required>
+        <p class="error-message milli island-1-4 push-0 text-center" id="email-error">
+          <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#form-warning" /></svg></i>
+          <span class="icon-label">Please provide a properly a reachable phone contact</span>
+        </p>
+      </div>
+
+
       <script src="https://thomasjbradley.github.io/form-validation-helper/index.js"></script>
     </div>
-
 
 </body>
 </html>
