--- a/patterns/forms/radio-input.html
+++ b/patterns/forms/radio-input.html
@@ -13,13 +13,20 @@
 
 </head>
 <body>
-  <div class="unit xs-1">
+  <div>
 
-    <label for="status" class="giga bold push-1-2">Registered or Guest</label>
-    <input type="radio" id="resgistered" name="status">
-    <label class="push-r" for="resgistered">Registered</label>
-    <input type="radio" id="guest" name="status">
-    <label for="guest">Guest</label>
+    <label for="status" class="peta bold push-1-2">Registered or Guest</label>
+    <div class="grid">
+      <div class="unit xs-1-2">
+        <input type="radio" id="resgistered" name="status">
+        <label class="push-r mega" for="resgistered">Registered</label>
+      </div>
+      <div class="unit xs-1-2">
+        <input type="radio" id="guest" name="status">
+        <label class="mega" for="guest">Guest</label>
+      </div>
+
+    </div>
   </div>
 </body>
 </html>
