--- a/patterns/forms/text-area.html
+++ b/patterns/forms/text-area.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-  <div class="unit [ xs-1-2 ] pad-t ">
+  <div class="pad-t ">
     <label for="comments">Comments</label>
     <textarea class="italic milli grey-text" name="comments" id="commments" rows="4" cols="80">Leave us a message!</textarea>
   </div>
