--- a/patterns/navigation/bread-crumbs.html
+++ b/patterns/navigation/bread-crumbs.html
@@ -15,9 +15,9 @@
 
   <nav class="" id=#nav>
     <ul class="list-group-inline breadcrumb valign-bottom">
-      <li><a class="link-box peta gutter-1-8" href="#">Home <b class="inline normal">></b></a></li>
-      <li><a class="link-box peta gutter-1-8" href="#">Product list <b class="inline normal">></b><a></li>
-      <li><a class="link-box peta gutter-1-8" href="#">Rubik <b class="inline normal">></b></a></li>
+      <li><a class="link-box peta gutter-1-8" href="#">Home</a><b class="inline peta normal">></b></li>
+      <li><a class="link-box peta gutter-1-8" href="#">Product list</a><b class="inline peta normal">></b></li>
+      <li><a class="link-box peta gutter-1-8" href="#">Rubik</a><b class="inline peta normal">></b></li>
       <li class="peta gutter-1-8">Current Item</li>
     </ul>
   </nav>
