--- a/patterns/footer/footer.html
+++ b/patterns/footer/footer.html
@@ -30,10 +30,10 @@
         <div class="unit [ xs-1 m-1-3 ] island">
           <ul class="list-group push-0">
             <span class="bold footer-section-heading mega push-1-2">Company info</span>
-            <li><a class="link-box footer-section-text"href="../../pages/index.html">HomePage</a></li>
-            <li><a class="link-box footer-section-text"href="../../pages/product-list.html">Product Page</a></li>
-            <li><a class="link-box footer-section-text"href="../../pages/product-detail.html"></a></li>
-            <li><a class="link-box footer-section-text"href="../../pages/checkout.html">Option 1</a></li>
+            <li><a class="link-box footer-section-text"href="../pages/home.html">HomePage</a></li>
+            <li><a class="link-box footer-section-text"href="../pages/product-list.html">Product Page</a></li>
+            <li><a class="link-box footer-section-text"href="../pages/product-detail.html">Product Details</a></li>
+            <li><a class="link-box footer-section-text"href="../pages/checkout.html">Checkout</a></li>
 
 
           </ul>
@@ -54,22 +54,22 @@
               <ul class="list-group-inline">
                 <li>
                   <a href="#">
-                    <i class="icon i-48"><svg><use xlink:href="../../images/icons.svg#facebook"></use></svg></i>
+                    <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#facebook"></use></svg></i>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <i class="icon i-48"><svg><use xlink:href="../../images/icons.svg#twitter"></use></svg></i>
+                    <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#twitter"></use></svg></i>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <i class="icon i-48"><svg><use xlink:href="../../images/icons.svg#snapchat"></use></svg></i>
+                    <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#snapchat"></use></svg></i>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <i class="icon i-48"><svg><use xlink:href="../../images/icons.svg#instagram"></use></svg></i>
+                    <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#instagram"></use></svg></i>
                   </a>
                 </li>
               </ul>
