--- a/patterns/forms/email-input.html
+++ b/patterns/forms/email-input.html
@@ -14,11 +14,8 @@
 </head>
 <body>
 
-  <div class="unit [ xs-1-2 ]">
-
-    <form class="" action="index.html" method="post" novalidate>
-
-    <div class="push-1-2 unit [ xs-1-8 ] pad-t-1-2 gutter-1-4">
+  <div>
+    <div>
       <label for="email">Email</label>
       <input type="email" id="email" required aria-describedby="email-error">
       <p class="error-message milli island-1-4 push-0 text-center" id="email-error">
@@ -26,7 +23,6 @@
         <span class="icon-label">Please provide a properly formatted email address</span>
       </p>
     </div>
-  </form>
 
 
     <script src="https://thomasjbradley.github.io/form-validation-helper/index.js"></script>
