--- a/patterns/forms/password-input.html
+++ b/patterns/forms/password-input.html
@@ -15,9 +15,8 @@
 <body>
 
   <div>
-    <form class="" action="index.html" method="post" novalidate>
 
-      <div class="unit [ xs-1-2 ]">
+      <div>
         <label for="password">Password</label>
         <input type="password" name="password" id="password" required aria-describedby="password-error">
         <p class="error-message milli island-1-4 push-0 text-center" id="password-error">
@@ -25,7 +24,6 @@
           <span class="icon-label">Your email address/password information are incorrect</span>
         </p>
       </div>
-    </form>
 
 
     <script src="https://thomasjbradley.github.io/form-validation-helper/index.js"></script>
