--- a/patterns/navigation/section-illustration.html
+++ b/patterns/navigation/section-illustration.html
@@ -9,6 +9,7 @@
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik:400,700" rel="stylesheet">
+  <link href="../buttons/buttons.css" rel="stylesheet">
   <link href="navigation.css" rel="stylesheet">
 </head>
 <body>
@@ -16,14 +17,17 @@
   <div class="section-illustration gutter pad-t-2 pad-b-2">
 
     <div class="island-2 relative wrapper">
-      <div class="accesibility-notice island-2 wrapper">
-        <h2>Did you Know?</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
-        Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a class="btn"><span aria-label="More">More<i></i></span></a>
+      <div class="accesibility-notice island-2">
+        <div class="notice-wrapper">
+          <h2>Did you Know?</h2>
+          <p class="push-r">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+          <a class="btn"><span aria-label="More">More<i></i></span></a>
+        </div>
       </div>
-      <div class="absolute accesibility-illustration icon i-256">
-        <img src="http://placehold.it/640x480" alt="">
+      <div class="absolute accesibility-illustration">
+        <i class="icon i-sizing-accessibility">
+          <img src="../../images/accessibility-cube.svg" alt="">
+        </i>
       </div>
   </div>
 
