--- a/index.html
+++ b/index.html
@@ -1547,8 +1547,8 @@
         &lt;/div>
 
         &lt;div class="push unit xs-1 s-1 m-1 l-1-2 space-left">
-          &lt;label for="age">Age&lt;/label>
-          &lt;input id="age" type="number" name="age" value="">
+          &lt;label for="age">Number&lt;/label>
+          &lt;input id="number" type="number" name="number" value="">
         &lt;/div>
 
         &lt;div class="push unit xs-1 s-1 m-1 l-1-2 space-right">
@@ -1573,7 +1573,7 @@
 
     &lt;/fieldset>
     &lt;div class="text-center">
-      &lt;button class="button" type="submit" value="send">Send&lt;/button>
+      &lt;button class="button" type="submit" value="send">Checkout&lt;/button>
     &lt;/div>
     &lt;input type="hidden" name="_subject" value="Request to join the mission">
 
