--- a/patterns/forms/fullform.html
+++ b/patterns/forms/fullform.html
@@ -24,8 +24,8 @@
           </div>
 
           <div class="push unit xs-1 s-1 m-1 l-1-2 space-left">
-            <label for="age">Age</label>
-            <input id="age" type="number" name="age" value="">
+            <label for="age">Number</label>
+            <input id="number" type="number" name="number" value="">
           </div>
 
           <div class="push unit xs-1 s-1 m-1 l-1-2 space-right">
@@ -50,7 +50,7 @@
 
       </fieldset>
       <div class="text-center">
-        <button class="button" type="submit" value="send">Send</button>
+        <button class="button" type="submit" value="send">Checkout</button>
       </div>
       <input type="hidden" name="_subject" value="Request to join the mission">
     </form>
