Trying to fix underline

--- a/index.html
+++ b/index.html
@@ -1539,7 +1539,7 @@
               <code><pre id="forms-fullform-code-sample-copy-chunk">&lt;section class="island max-length"&gt;
   &lt;div class="pad-t pad-b">
     &lt;fieldset>
-      &lt;legend class="italic not-bold push giga">Personal details&lt;/legend>
+      &lt;legend class="push giga">Personal details&lt;/legend>
       &lt;div class="grid">
         &lt;div class="push unit xs-1 s-1 m-1 l-1-2 space-right">
           &lt;label for="name">Name&lt;/label>
