--- a/patterns/forms/fullform.html
+++ b/patterns/forms/fullform.html
@@ -16,7 +16,7 @@
 <section class="island max-length">
   <div class="pad-t pad-b">
       <fieldset>
-        <legend class="italic not-bold push giga">Personal details</legend>
+        <legend class="push giga">Personal details</legend>
         <div class="grid">
           <div class="push unit xs-1 s-1 m-1 l-1-2 space-right">
             <label for="name">Name</label>
