--- a/pages/product-details.html
+++ b/pages/product-details.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <script type="application/json" data-pattern="header/header"></script>
+  <script type="application/json" data-pattern="footer/footer"></script>
 
 </body>
 </html>
