Add Checkout page content

--- a/index.html
+++ b/index.html
@@ -1999,16 +1999,14 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="forms-date-field-code-sample-copy-chunk">&lt;form action="index.html" method="post" novalidate=""&gt;
-  &lt;div class="unit [ xs-1-8 ] pad-t-1-2 gutter-1-4">
-    &lt;label for="expiration push-1-2">Expiration Date&lt;/label>
-    &lt;input type="date" name="expiration" id="expiration" required aria-describedby="date-error">
-    &lt;p class="error-message milli island-1-4 push-0" id="date-error">
-      &lt;i class="icon i-16">&lt;svg>&lt;use xlink:href="images/icons.svg#error"/>&lt;/svg>&lt;/i>
-      &lt;span class="icon-label">Please provide the date information as requested&lt;/span>
-    &lt;/p>
-  &lt;/div>
-&lt;/form>
+              <code><pre id="forms-date-field-code-sample-copy-chunk">&lt;div&gt;
+  &lt;label for="expiration push-1-2">Expiration Date&lt;/label>
+  &lt;input type="date" name="expiration" id="expiration" required aria-describedby="date-error">
+  &lt;p class="error-message milli island-1-4 push-0" id="date-error">
+    &lt;i class="icon i-16">&lt;svg>&lt;use xlink:href="../../images/icons.svg#form-warning"/>&lt;/svg>&lt;/i>
+    &lt;span class="icon-label">Please provide the date information as requested&lt;/span>
+  &lt;/p>
+&lt;/div>
 </pre></code>
             </div>
           </div>
@@ -2153,7 +2151,7 @@
               <code><pre id="forms-legend-label-code-sample-copy-chunk">&lt;div&gt;
   &lt;div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
     &lt;h3 class="push-0">
-        &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="images/icons.svg#error"/>&lt;/svg>&lt;/i>
+        &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#form-warning"/>&lt;/svg>&lt;/i>
         &lt;span class="icon-label">There are items that require your attention&lt;/span>
       &lt;/h3>
   &lt;/div>
@@ -2449,7 +2447,7 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="forms-search-bar-code-sample-copy-chunk">&lt;div class="push gutter pad-t relative"&gt;
+              <code><pre id="forms-search-bar-code-sample-copy-chunk">&lt;div class="relative"&gt;
   &lt;input id="search" type="search" placeholder="Search" style="text-indent:24px;">
   &lt;i class="icon i-18 absolute search-icon">&lt;svg>&lt;use xlink:href="../../images/icons.svg#search-bar"/>&lt;/svg>&lt;/i>
 &lt;/div>
@@ -2517,7 +2515,7 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="forms-select-input-code-sample-copy-chunk">&lt;div class="unit [ xs-1-2 ] pad-t-1-2 gutter-1-4"&gt;
+              <code><pre id="forms-select-input-code-sample-copy-chunk">&lt;div&gt;
   &lt;label for="checkbox">Country&lt;/label>
   &lt;select id="checkbox" name="checkbox">
     &lt;option value="canada">Canada&lt;/option>
@@ -2597,8 +2595,8 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="forms-text-area-code-sample-copy-chunk">&lt;div class="pad-t "&gt;
-  &lt;label for="comments">Comments&lt;/label>
+              <code><pre id="forms-text-area-code-sample-copy-chunk">&lt;div&gt;
+  &lt;label for="comments peta">Comments&lt;/label>
   &lt;textarea class="italic milli grey-text" name="comments" id="commments" rows="4" cols="80">Leave us a message!&lt;/textarea>
 &lt;/div>
 </pre></code>
