--- a/patterns/forms/date-field.html
+++ b/patterns/forms/date-field.html
@@ -14,16 +14,14 @@
 </head>
 <body>
 
-  <form class="" action="index.html" method="post" novalidate>
-    <div class="unit [ xs-1-8 ] pad-t-1-2 gutter-1-4">
+    <div>
       <label for="expiration push-1-2">Expiration Date</label>
       <input type="date" name="expiration" id="expiration" required aria-describedby="date-error">
       <p class="error-message milli island-1-4 push-0" id="date-error">
-        <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+        <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#form-warning" /></svg></i>
         <span class="icon-label">Please provide the date information as requested</span>
       </p>
     </div>
-  </form>
 
 
 
