--- a/patterns/forms/search-bar.html
+++ b/patterns/forms/search-bar.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <div class="push gutter pad-t relative">
+  <div class="relative">
     <input id="search" type="search" placeholder="Search" style="text-indent:24px;">
     <i class="icon i-18 absolute search-icon"><svg><use xlink:href="../../images/icons.svg#search-bar"></use></svg></i>
   </div>
