--- a/patterns/forms/select-input.html
+++ b/patterns/forms/select-input.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <div class="unit [ xs-1-2 ] pad-t-1-2 gutter-1-4">
+  <div>
     <label for="checkbox">Country</label>
     <select id="checkbox" name="checkbox">
       <option value="canada">Canada</option>
