--- a/patterns/forms/text-area.html
+++ b/patterns/forms/text-area.html
@@ -13,8 +13,8 @@
 
 </head>
 <body>
-  <div class="pad-t ">
-    <label for="comments">Comments</label>
+  <div>
+    <label for="comments peta">Comments</label>
     <textarea class="italic milli grey-text" name="comments" id="commments" rows="4" cols="80">Leave us a message!</textarea>
   </div>
 
