--- a/pages/checkout-page.html
+++ b/pages/checkout-page.html
@@ -56,23 +56,73 @@
               </div>
               <div class="unit xs-1-2 gutter-1-4">
                 <script type="application/json" data-pattern="forms/text-input">{
-                  "label":"Last Name"
+                  "label":"Last Name",
+                  "label[for]": "last-name",
+                  "input[id]":"last-name",
+                  "input[name]": "last-name"
                 }</script>
-              </div><div class="unit xs-1-2 gutter-1-4 pad-t-1-2">
+              </div>
+              <div class="unit xs-1-2 gutter-1-4 pad-t-1-2">
                 <script type="application/json" data-pattern="forms/email-input"></script>
               </div>
 
               <div class="unit xs-1-2 gutter-1-4 pad-t-1-2">
                 <script type="application/json" data-pattern="forms/phone-form"></script>
               </div>
+
               <div class="unit xs-1 pad-t-1-2">
                 <script type="application/json" data-pattern="forms/password-input"></script>
               </div>
-              <div class="unit xs-1">
+
+              <div class="unit xs-1 pad-t-1-2">
+                <div class="grid">
+                  <div class="unit  xs-1">
+                    <script type="application/json" data-pattern="forms/text-input">{
+                      "label":"Address*",
+                      "label[for]": "address",
+                      "input[id]":"address",
+                      "input[name]": "address"
+                    }</script>
+                  </div>
+                  <div class="unit xs-1 pad-t-1-4">
+                    <script type="application/json" data-pattern="forms/text-input">
+                      {
+                        "label":"",
+                        "label[for]": "address-2",
+                        "input[id]":"address-2",
+                        "input[name]": "address-2"
+                      }
+                  </script>
+                  </div>
+                </div>
+              </div>
+
+              <div class="unit xs-1 pad-t-1-2">
+                <script type="application/json" data-pattern="forms/text-input">
+                  {
+                    "label": "City",
+                    "label[for]": "city",
+                    "input[id]":"city",
+                    "input[name]": "city"
+                  }
+              </script>
+              </div>
+
+              <div class="unit xs-1-2 pad-t-1-2">
                 <script type="application/json" data-pattern="forms/text-input">{
-                  "label":"Address"
+                  "label":"Province",
+                  "label[for]": "province",
+                  "input[id]":"province",
+                  "input[name]": "province"
                 }</script>
               </div>
+
+              <div class="unit xs-1-2 gutter-1-2 pad-t-1-2">
+                <script type="application/json" data-pattern="forms/select-input"></script>
+              </div>
+
+
+
             </div>
           </div>
 
@@ -96,7 +146,8 @@
 
           <div class="unit xs-1 xl-1-3 pad-b-2">
             <script type="application/json" data-pattern="forms/legend-label">{
-              "legend": "Order Review"
+              "legend": "Order Review",
+              "input": ""
             }</script>
           </div>
 
@@ -108,6 +159,7 @@
   </main>
 
   <script type="application/json" data-pattern="footer/footer"></script>
+  <script src="https://thomasjbradley.github.io/form-validation-helper/index.js"></script>
 
   </body>
   </html>
