--- a/patterns/forms/legend-label.html
+++ b/patterns/forms/legend-label.html
@@ -13,10 +13,10 @@
 
 </head>
 <body>
-  <div class="">
+  <div>
     <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
       <h3 class="push-0">
-        <i class="icon i-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+        <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#form-warning" /></svg></i>
         <span class="icon-label">There are items that require your attention</span>
       </h3>
     </div>
